--- a/Ciphers.vcxproj.filters
+++ b/Ciphers.vcxproj.filters
@@ -30,5 +30,11 @@
     <ClCompile Include="XOR cipher.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="DES.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
+    <ClCompile Include="RSA.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
