--- a/Ciphers.vcxproj.filters
+++ b/Ciphers.vcxproj.filters
@@ -37,4 +37,9 @@
       <Filter>Исходные файлы</Filter>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Ciphers.h">
+      <Filter>Исходные файлы</Filter>
+    </ClInclude>
+  </ItemGroup>
 </Project>
