--- a/Ciphers.vcxproj.filters
+++ b/Ciphers.vcxproj.filters
@@ -36,6 +36,12 @@
     <ClCompile Include="RSA.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="Diffie–Hellman key exchange.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
+    <ClCompile Include="Elgamal.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Ciphers.h">
