--- a/Ciphers.vcxproj
+++ b/Ciphers.vcxproj
@@ -144,6 +144,8 @@
   <ItemGroup>
     <ClCompile Include="Caesar cipher.cpp" />
     <ClCompile Include="DES.cpp" />
+    <ClCompile Include="Diffie–Hellman key exchange.cpp" />
+    <ClCompile Include="Elgamal.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="Quadratic Trithemius cipher.cpp" />
     <ClCompile Include="RSA.cpp" />
